--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
-h1 {
-    color: red;
+/* Geral */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Helvetica;
+}
+
+body {
+    background-color: #fafafa;
 }
