--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,25 @@ body {
     padding: 0;
     font-weight: bold;
 }
+
+/* separador */
+.separator {
+    position: relative;
+}
+
+.line {
+    border-top: 1px solid #dbdbdb;
+    width: 268px;
+    margin: 25px auto 35px;
+}
+
+.separator span {
+    position: absolute;
+    text-transform: uppercase;
+    color: #bbb;
+    background-color: #fff;
+    top: -6px;
+    width: 50px;
+    margin-left: -25px;
+    font-size: 14px;
+}
