--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,14 @@ body {
     font-size: 13px;
     margin-top: 1px;
 }
+
+/* forgot password */
+#forgot-pass {
+    margin-bottom: 20px;
+    font-size: 12px;
+}
+
+#forgot-pass a {
+    text-decoration: none;
+    color: #373799;
+}
