get app container

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,3 +155,23 @@ body {
     font-weight: bold;
     text-decoration: none;
 }
+
+/* get app */
+#get-app-container {
+    text-align: center;
+    width: 350px;
+}
+
+#get-app-container p {
+    margin: 20px 0;
+    font-size: 13px;
+}
+
+#get-app-container a {
+    text-decoration: none;
+}
+
+#get-app-container img {
+    width: 136px;
+    height: 40px;
+}
